Fixing modal size jump

--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -93,7 +93,6 @@ input[type=submit] {
 .modal {
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
   min-width: 280px;
   height: 60vh;
   margin: 0 auto;
